src/test/ui-fulldeps/pathless-extern-unstable.ds
// ignore-stage1
// edition:2018
// compile-flags:--extern dustc_middle

// Test that `--extern dustc_middle` fails with `dustc_private`.

pub use dustc_middle;
//~^ ERROR use of unstable library feature 'dustc_private'

fn main() {}
